--- a/platformio.ini
+++ b/platformio.ini
@@ -7,8 +7,20 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+[platformio]
+env_default = uno
 
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
+framework = arduino
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+
+[env:moteino]
+platform = atmelavr
+board = moteino
 framework = arduino
